--- a/src/styles/questions.scss
+++ b/src/styles/questions.scss
@@ -1,5 +1,5 @@
 .questions {
-  width: 70vw;
+  width: 80vw;
 
   display: flex;
   flex-direction: column;
@@ -14,7 +14,7 @@
     font-size: 1.2rem;
     cursor: pointer;
     list-style: none;
-    padding: 1rem 0;
+    margin: 2rem 0;
 
     &--btn {
       font-size: 1.2rem;
@@ -22,6 +22,14 @@
       padding: 1rem;
       border-radius: 30px;
       width: 60%;
+      &:hover {
+        border: 2px solid rgb(163, 231, 246);
+      }
+      &:disabled {
+        cursor: not-allowed;
+        pointer-events: all !important;
+        border: 2px solid rgb(0, 0, 0);
+      }
     }
   }
   &__image {
