--- a/src/styles/questions.scss
+++ b/src/styles/questions.scss
@@ -28,7 +28,8 @@
       &:disabled {
         cursor: not-allowed;
         pointer-events: all !important;
-        border: 2px solid rgb(0, 0, 0);
+        border: 2px solid rgb(198, 198, 198);
+        color: black;
       }
     }
   }
@@ -62,6 +63,12 @@
     width: 200px;
     place-self: end;
     cursor: pointer;
+    &:disabled {
+      cursor: not-allowed;
+      pointer-events: all !important;
+      // border: 2px solid rgb(198, 198, 198);
+      // color: black;
+    }
   }
 }
 .clicked {
