--- a/src/styles/questions.scss
+++ b/src/styles/questions.scss
@@ -1,35 +1,66 @@
 .questions {
-  width: 80vw;
-
+  background-color: rgb(255, 255, 255);
+  width: 100vw;
+  height: calc(100vh - 100px);
   display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  // flex-direction: column;
+
   &__question {
-    font-size: 2rem;
+    width: 50%;
+    // padding: 2rem;
+    // background-color: pink;
+    font-size: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &--text {
+      // background-color: rgb(171, 171, 244);
+      height: 50%;
+      padding-top: 3rem;
+      display: flex;
+      flex-direction: column;
+      // align-items: center;
+      justify-content: start;
+      gap: 5rem;
+      width: 80%;
+    }
+    &__image {
+      // background-color: brown;
+    }
   }
   &__answers {
-    padding: 2rem 0;
+    padding: 9rem 0 0;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    // justify-content: center;
+    align-items: center;
+    // background-color: green;
   }
   &__answer {
-    font-size: 1.2rem;
+    // font-size: 101rem;
     cursor: pointer;
     list-style: none;
-    margin: 2rem 0;
+    margin: 1rem 0;
+    width: 80%;
 
     &--btn {
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       cursor: pointer;
       padding: 1rem;
       border-radius: 30px;
-      width: 60%;
+      border: 2px solid #3c3c3c;
+      width: 100%;
+      background-color: #3c3c3c;
+      color: #fff;
       &:hover {
-        border: 2px solid rgb(163, 231, 246);
+        border: 2px solid #ffcd00;
       }
       &:disabled {
         cursor: not-allowed;
         pointer-events: all !important;
         border: 2px solid rgb(198, 198, 198);
-        color: black;
+        color: rgb(255, 255, 255);
       }
     }
   }
@@ -61,7 +92,7 @@
     padding: 1rem;
     border-radius: 30px;
     width: 200px;
-    place-self: end;
+    // place-self: end;
     cursor: pointer;
     &:disabled {
       cursor: not-allowed;
@@ -75,8 +106,36 @@
   background-color: rgb(108, 177, 246);
 }
 .correct {
-  background-color: rgb(151, 246, 151);
+  background-color: rgb(48, 146, 48);
 }
 .incorrect {
-  background-color: rgb(246, 164, 164);
+  background-color: rgb(147, 44, 44);
+}
+
+.main__info {
+  border-bottom: 2px solid #ffcd00;
+  width: 100vw;
+  max-height: 100px;
+  // background-color: lightgreen;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 6rem;
+  // gap: 1rem;
+  & h4 {
+    font-size: 3rem;
+  }
+}
+
+.question__number {
+  font-size: 2rem;
+  text-align: center;
+}
+
+.results {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
