--- a/src/styles/quiz.scss
+++ b/src/styles/quiz.scss
@@ -1,13 +1,21 @@
 .container {
-  display: flex;
-  max-width: 1400px;
+  // display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 100vw;
+
+  min-height: 100vh;
+  color: #3c3c3c;
 }
 
 .intro {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  height: 100vh;
   gap: 3rem;
+
   // border: 3px solid yellow;
   // border-radius: 30px;
   padding: 3rem;
@@ -25,6 +33,10 @@
     font-weight: 600;
     padding: 1rem 2rem;
     border-radius: 30px;
+    transition: all 0.3s ease-in;
     cursor: pointer;
+    &:hover {
+      background-color: #ffcd00;
+    }
   }
 }
