Added next button +

--- a/src/styles/MainTimer.scss
+++ b/src/styles/MainTimer.scss
@@ -10,3 +10,12 @@
     font-size: 4rem;
   }
 }
+.progress-bar {
+  width: 200px;
+  height: 20px;
+  border: 2px solid black;
+}
+.progress {
+  height: 16px;
+  background-color: #3c3c3c;
+}
