--- a/src/styles/questions.scss
+++ b/src/styles/questions.scss
@@ -1,5 +1,7 @@
 .questions {
   background-color: rgb(255, 255, 255);
+  // background-color: #8a8989;
+
   width: 100vw;
   height: calc(100vh - 100px);
   display: flex;
@@ -138,4 +140,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.finalImg {
+  height: 60%;
+  & img {
+    height: 100%;
+  }
+}
+.intro__span {
+  color: #ffcd00;
 }
