--- a/src/styles/quiz.scss
+++ b/src/styles/quiz.scss
@@ -86,7 +86,8 @@
     }
   }
 }
-.input {
+.input,
+select {
   width: 400px;
   height: 70px;
   font-size: 2rem;
@@ -104,6 +105,7 @@
     caret-color: #000;
   }
 }
+
 .intro__clues {
   display: flex;
   flex-direction: column;
@@ -178,16 +180,16 @@
   align-items: center;
   gap: 3rem;
   &__item {
-    opacity: 0;
-    &:nth-child(1) {
-      animation: slide_two 0.3s ease-in-out 0.5s forwards;
-    }
-    &:nth-child(2) {
-      animation: slide_two 0.3s ease-in-out 1s forwards;
-    }
-    &:nth-child(3) {
-      animation: slide_two 0.3s ease-in-out 3s forwards;
-    }
+    // opacity: 0;
+    // &:nth-child(1) {
+    //   animation: slide_two 0.3s ease-in-out 0.5s forwards;
+    // }
+    // &:nth-child(2) {
+    //   animation: slide_two 0.3s ease-in-out 1s forwards;
+    // }
+    // &:nth-child(3) {
+    //   animation: slide_two 0.3s ease-in-out 3s forwards;
+    // }
   }
 }
 
