--- a/src/styles/questions.scss
+++ b/src/styles/questions.scss
@@ -55,14 +55,21 @@
       width: 100%;
       background-color: #3c3c3c;
       color: #fff;
+      // transform: scale(1.03);
+      transition: all 0.3s ease-in-out;
       &:hover {
-        border: 2px solid #ffcd00;
+        transform: scale(1.03);
+        // background-color: #ffcd00;
+        // border: 2px solid #ffcd00;
       }
       &:disabled {
         cursor: not-allowed;
         pointer-events: all !important;
         border: 2px solid rgb(198, 198, 198);
         color: rgb(255, 255, 255);
+      }
+      &:active {
+        background-color: #ffcd00;
       }
     }
   }
@@ -90,22 +97,52 @@
     cursor: pointer;
   }
   &__next--btn {
+    position: relative;
     font-size: 1.2rem;
     padding: 1rem;
     border-radius: 30px;
-    width: 200px;
+    width: 300px;
     // place-self: end;
     cursor: pointer;
+    transition: all 0.3s ease-in-out;
     &:disabled {
       cursor: not-allowed;
       pointer-events: all !important;
       // border: 2px solid rgb(198, 198, 198);
       // color: black;
     }
+    &::after {
+      content: '  \203A';
+      font-weight: 700;
+      position: absolute;
+      padding: 1rem;
+      top: 0;
+      left: 70%;
+      width: 10%;
+      height: 100%;
+      // background-color: #3a3939;
+      opacity: 0;
+      border-radius: 30px;
+      transition: all 0.1s ease-in;
+    }
+    &:hover {
+      // background-color: #00c3ff;
+      // border: 1px solid #ffcd00;
+      transform: scale(1.03);
+
+      transition: all 0.1s ease-in;
+      &::after {
+        // background-color: #00c3ff;
+        left: 80%;
+        opacity: 1;
+        transition: all 0.3s ease-in;
+      }
+    }
   }
 }
 .clicked {
-  background-color: rgb(108, 177, 246);
+  background-color: #ffcd00;
+  color: #000;
 }
 .correct {
   background-color: rgb(48, 146, 48);
